...
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.example.myapplication.afterLogin"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/HelloMessage"
            android:layout_width="239dp"
            android:layout_height="43dp"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_weight="1"
            android:text=""
            android:textAllCaps="false"
...
